k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lms-books
  labels:
    app: lms-books
    environment: development
