k8s/traefik-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            - --api.insecure=true
            - --api.dashboard=true
            - --providers.kubernetescrd
            - --providers.kubernetescrd.allowCrossNamespace=true
            - --entrypoints.web.address=:9000
            - --entrypoints.traefik.address=:8080
          ports:
            - name: web
              containerPort: 9000
            - name: dashboard
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 9000
      targetPort: 9000
    - name: dashboard
      port: 8080
      targetPort: 8080
